# pomodoro

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: timer.h
src/: main.cpp  timer.cpp
